fix: add jinja initial setup

--- a/doc/source/cheat_sheet/cheat_sheet.qmd
+++ b/doc/source/cheat_sheet/cheat_sheet.qmd
@@ -1,6 +1,8 @@
 ---
 title: PyMAPDL cheat sheet
 format: cheat_sheet-pdf
+# params:
+#   version: "tests"
 version: main
 footer: PyMAPDL
 footerlinks:
