--- a/doc/changelog.d/3296.miscellaneous.md
+++ b/doc/changelog.d/3296.miscellaneous.md
@@ -1,1 +1,1 @@
-docs: adding warning about *mwrite. Update *vwrite warning to include *mwrite
+docs: adding warning about \*mwrite. Update \*vwrite warning to include \*mwrite
