--- a/doc/changelog.d/3758.fixed.md
+++ b/doc/changelog.d/3758.fixed.md
@@ -1,1 +1,1 @@
-fix: Improve error handling in *GET method and enhance output logging
+fix: Improve error handling in GET method and enhance output logging
